fix alignment issues

--- a/src/components/content/home_section3/homesection3.css
+++ b/src/components/content/home_section3/homesection3.css
@@ -24,7 +24,7 @@
     padding: 10px;
 }
 
-li {
+.homesection3-li {
     text-indent: -24px;
     margin-left: 24px;
     line-height: normal;
