--- a/src/components/content/singlePost/singlepost.css
+++ b/src/components/content/singlePost/singlepost.css
@@ -193,16 +193,18 @@ align-items: center;
   width: 100%;
   background-color: var(--body_background);
   color: white;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: center;
+  padding: 5px;
+  text-align: left;
 }
 
 .postContent {
-  width: 100%;
   margin-top: 25px;
   font-family: "Roboto";
   font-weight: 500;
+}
+
+.postContent li {
+  margin-left: 24px;
 }
 
 .postSection-t h2 {
